--- a/index.html
+++ b/index.html
@@ -90,8 +90,19 @@
         }
 
         function playBeep() {
-            let beep = new Audio("https://www.soundjay.com/button/beep-07.wav");
-            beep.play();
+            let ctx = new (window.AudioContext || window.webkitAudioContext)();
+            let oscillator = ctx.createOscillator();
+            let gain = ctx.createGain();
+
+            oscillator.type = "sine"; 
+            oscillator.frequency.setValueAtTime(1000, ctx.currentTime); // 1000 Hz beep
+            gain.gain.setValueAtTime(1, ctx.currentTime); // Full volume
+            gain.gain.exponentialRampToValueAtTime(0.01, ctx.currentTime + 0.5); // Fade out
+
+            oscillator.connect(gain);
+            gain.connect(ctx.destination);
+            oscillator.start();
+            oscillator.stop(ctx.currentTime + 0.5); // Stop after 0.5 seconds
         }
     </script>
 </body>
