--- a/AirsoftChronicles.html
+++ b/AirsoftChronicles.html
@@ -189,7 +189,7 @@
                         <p class="text-gray-400 text-sm mb-3">High-performance AEG with full metal construction</p>
                         <div class="flex justify-between items-center">
                             <span class="text-blue-400 font-bold">$349.99</span>
-                            <a href="/gear/krytac-trident" class="bg-blue-600 hover:bg-blue-700 text-white px-3 py-1 rounded text-sm">Details</a>
+                            <a href="/gear/sa-e28-etu.html" class="bg-blue-600 hover:bg-blue-700 text-white px-3 py-1 rounded text-sm">Details</a>
                         </div>
                     </div>
                 </div>
