--- a/AirsoftChronicles.html
+++ b/AirsoftChronicles.html
@@ -204,7 +204,7 @@
                         <p class="text-gray-400 text-sm mb-3">Super realistic airsoft pistol</p>
                         <div class="flex justify-between items-center">
                             <span class="text-blue-400 font-bold">$179.99</span>
-                            <a href="/gear/tokyo-marui-hicapa" class="bg-blue-600 hover:bg-blue-700 text-white px-3 py-1 rounded text-sm">Details</a>
+                            <a href="/gear/glock-45.html" class="bg-blue-600 hover:bg-blue-700 text-white px-3 py-1 rounded text-sm">Details</a>
                         </div>
                     </div>
                 </div>
